# t1-solution-2

./: .dockerignore  .gitignore  docker-compose.yml  package.json
backend/: pyproject.toml  railway.json  render.yaml  requirements.txt
backend/app/: main.py
backend/app/core/: config.py  models.py
backend/app/services/: confluence_service.py  document_processor.py  notion_service.py  vector_search.py
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
src/: App.tsx
src/components/: ChatInterface.tsx  FlowEditor.tsx  HeroSection.tsx  Layout.tsx  Logo.tsx  NodeTypes.tsx
src/theme/: index.ts
